# ControlTech

./: .gitignore  README.md
RamerDouglasPeuckerPlotter/data/: cosData.csv
RamerDouglasPeuckerPlotter/src/: CMakeLists.txt
RamerDouglasPeuckerPlotter/src/data/: CMakeLists.txt  PlotData.C  PlotData.h
RamerDouglasPeuckerPlotter/src/data/test/: testPerpindicular.C  testSort.C
RamerDouglasPeuckerPlotter/src/ui/: .PlotWindow.C.swp  CMakeLists.txt  PlotWindow.C  PlotWindow.h  main.C
